# fde

./: .gitignore  CMakeLists.txt  README.md
FetchDecodeExecute/: FetchDecodeExecute.pro  component.h  instructionswidget.cpp  instructionswidget.h
FetchExecuteCycle-desktop/: FetchExecuteCycle-desktop.pro  instructionswidget.cpp  instructionswidget.h  instructionswidget.ui  loadprogramdialogue.cpp  loadprogramdialogue.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/: CMakeLists.txt  component.cpp  component.h  instructionswidget.cpp  instructionswidget.h  loadprogramdialogue.cpp  loadprogramdialogue.h  loadprogramdialogue.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
